--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Glassmorphism Icon Hover Effects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+    </section>
 </body>
 </html>
