--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glassmorphism Icon Hover Effects</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" 
+    crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +14,18 @@
         <div class="color"></div>
         <div class="color"></div>
         <div class="color"></div>
+        <ul>
+            <li><a href="#"><i class="fa fa-facebook-official" 
+            aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter" 
+            aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-instagram" 
+            aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin" 
+            aria-hidden="true"></i></a></li>
+            <li><a href="#"><i class="fa fa-whatsapp" 
+            aria-hidden="true"></i></a></li>
+        </ul>
     </section>
 </body>
 </html>
